src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>JS01__JusticeServer</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>JS01__Acceptance_Error_Message__c</fullName>
        <label>Acceptance Error Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>JS01__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Account)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JS01__Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JS01__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JS01__Conflict_Check_Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conflict Check Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JS01__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JS01__Initial_Contact_Method__c</fullName>
        <label>Initial Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Walk-In</fullName>
                </value>
                <value>
                    <fullName>Web Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JS01__Intake_Questions__c</fullName>
        <label>Intake Questions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>JS01__Location_of_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location of Client</label>
        <referenceTo>JS01__Location__c</referenceTo>
        <relationshipLabel>Leads (County of Client)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JS01__Location_of_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location of Issue</label>
        <referenceTo>JS01__Location__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JS01__Number_of_Adults__c</fullName>
        <label>Number of Adults</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JS01__Number_of_Children__c</fullName>
        <label>Number of Children</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JS01__Number_of_Household_Members__c</fullName>
        <formula>JS01__Number_of_Adults__c +  JS01__Number_of_Children__c + JS01__Number_of_Seniors__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of Children +
Number of Adults +
Number of Seniors</inlineHelpText>
        <label>Number of Household Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JS01__Number_of_Seniors__c</fullName>
        <label>Number of Seniors</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JS01__Poverty_Level_With_Deductions__c</fullName>
        <formula>(JS01__Total_Yearly_Income__c -  JS01__Total_Yearly_Deductions__c)  / 
($Setup.JS01__JusticeServer_Settings__c.JS01__Poverty_Level_Baseline__c + 
   IF(
      JS01__Number_of_Household_Members__c &gt; 1,
      $Setup.JS01__JusticeServer_Settings__c.JS01__Poverty_Level_Additional_Amt_Person__c * (JS01__Number_of_Household_Members__c -1),
      0
   )
)</formula>
        <label>Poverty Level (With Deductions)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>JS01__Poverty_Level__c</fullName>
        <formula>JS01__Total_Yearly_Income__c  / 
($Setup.JS01__JusticeServer_Settings__c.JS01__Poverty_Level_Baseline__c + 
   IF(
       JS01__Number_of_Household_Members__c  &gt; 1,
      $Setup.JS01__JusticeServer_Settings__c.JS01__Poverty_Level_Additional_Amt_Person__c * (JS01__Number_of_Household_Members__c -1),
      0
   )
)</formula>
        <inlineHelpText>% of Poverty Level - Without Deductions</inlineHelpText>
        <label>Poverty Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>JS01__Problem_Code_Category__c</fullName>
        <formula>TEXT(JS01__Problem_Code__r.JS01__Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Problem Code Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JS01__Problem_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Problem Code</label>
        <referenceTo>JS01__Problem_Code__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JS01__Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>JS01__Rejection_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>JS01__Social_Security_Number__c</fullName>
        <label>Social Security Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JS01__Total_Yearly_Assets__c</fullName>
        <label>Total Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JS01__Total_Yearly_Deductions__c</fullName>
        <label>Total Yearly Deductions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JS01__Total_Yearly_Income__c</fullName>
        <label>Total Yearly Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JS01__Type_of_Entity__c</fullName>
        <label>Type of Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Nonprofit</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Preferred_Email__c</fullName>
        <label>Preferred Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Alternate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Preferred_Phone__c</fullName>
        <label>Preferred Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The batch this lead was created from.</inlineHelpText>
        <label>Batch</label>
        <referenceTo>npsp__Batch__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__CompanyCity__c</fullName>
        <label>Company City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__CompanyCountry__c</fullName>
        <label>Company Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__CompanyPostalCode__c</fullName>
        <label>Company Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__CompanyState__c</fullName>
        <label>Company State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__CompanyStreet__c</fullName>
        <label>Company Street</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>JS01__JusticeServer</fullName>
        <active>true</active>
        <businessProcess>JS01__JusticeServer</businessProcess>
        <label>JusticeServer</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>